# kbs_agent_a2a

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  llms.txt  pyproject.toml  start_client.py  start_server.py
agents/ragflow/: .env.example  README.md  __init__.py  __main__.py  agent.py  pyproject.toml  relationship_diagram_extended.txt  session_manager.py  start_server.py  task_manager.py
common/: README.md  types.py
common/client/: __init__.py  card_resolver.py  client.py
common/server/: __init__.py  db_task_manager.py  models.py  server.py  task_manager.py  task_manager_factory.py  utils.py
common/utils/: __init__.py  in_memory_cache.py  push_notification_auth.py
hosts/: __init__.py
hosts/kbs_cli/: README.md  __main__.py  start_client.py
