[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-ragflow"
version = "0.1.0"
description = "RagFlow integration with A2A protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx",
    "click",
    "python-dotenv",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 